--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "polls-frontend",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.19.3",
+    "npm": "9.1.2"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
